--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!-- Comentarios em HTML-->
 
-<html>
+<html lang="pt-br">
     
     <head>
         <meta charset="UTF-8">
@@ -16,7 +16,9 @@
         <div id="container"> <!--div#container-->
             <section id="intro">
                 <header>
-                    <img src="logo.png" alt="Imagem da Logomarca">
+                    <a href="index.html">
+                        <img src="logo.png" alt="Imagem da Logomarca">
+                    </a>
                 </header>
 
                 <main>
@@ -35,11 +37,11 @@
 
                 <section id="buttons">
                     <button onclick="onOff()">+ Adicionar Ideia</button>
-                    <button class="fat">Ver ideias</button>
+                    <a href="ideias.html" class="button">Ver ideias</a>
                 </section>
 
                 <footer>
-                    Com 💙 <a href="http://fb.com/rafamedeiso0">Rafael Medeiros</a>
+                    Com 💙 <a href="http://fb.com/rafamedeiros0" target="_blank">Rafael Medeiros</a>
                 </footer>
             </section>
 
